--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-fileupload": "^1.1.4",
     "firebase-admin": "^8.3.0",
     "geolib": "^3.0.4",
+    "image-size": "^0.8.3",
     "in-app-purchase": "^1.11.4",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
